a few changes for error handling and to set up caching